--- a/style.css
+++ b/style.css
@@ -97,12 +97,70 @@ body {
 }
 
 
+button {
+    margin: 20px;
+}
 
-.range__slider {
+.custom-btn {
+    width: 130px;
+    height: 40px;
+    color: white;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
     position: relative;
+    display: inline-block;
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+        7px 7px 20px 0px rgba(120, 3, 96, 0.1),
+        4px 4px 5px 0px rgba(0, 0, 0, .1);
+    outline: none;
+}
+
+.btn-14 {
+    background: #B7E8EB;
+    color: #015871;
+    border: none;
+    position: relative;
+    top: 60%;
+    left: 90%;
+
+    z-index: 1;
+}
+
+.btn-14:after {
+    position: absolute;
+    content: "";
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 0;
+    height: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 5px;
+    background-color: #015871;
+    background-image: linear-gradient(315deg, #015871 0%, #015871 74%);
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5);
+
+    transition: all 0.3s ease;
+}
+
+.btn-14:hover {
+    color: #B7E8EB;
+}
+
+.btn-14:hover:after {
+    top: auto;
+    bottom: 0;
+    height: 100%;
+}
+
+.btn-14:active {
+    top: 2px;
+}
+
+img {
+    filter: invert(100%);
 }
